apps/manifests/podinfo-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo-app
  namespace: podinfo-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: podinfo
          servicePort: 9898
